--- a/src/index.css
+++ b/src/index.css
@@ -41,14 +41,12 @@ body {
     box-shadow: 0 0 10px var(--medium-grey);
 }
 
-nav {
+.nav__header > nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 0;
-    margin: 0;
 }
 
 .nav__title {
@@ -56,9 +54,10 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-    font-weight: bold;
     padding-left: 0.5rem;
+    width: 4.5vw;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 /* Home Page */
@@ -75,11 +74,8 @@ nav {
 /* Login Page */
 
 .login__page {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
 }
 
 .login__forms {
@@ -87,7 +83,21 @@ nav {
 }
 
 .login__title {
+    margin: 0;
     margin-top: 2.5rem;
     margin-bottom: 2rem;
     opacity: 0.8;
+    text-align: center;
+}
+
+@media only screen and (max-width: 450px) {
+    .nav__title {
+        width: 14vw;
+    }
+
+    .login__forms {
+        min-width: auto;
+        padding: 0;
+        margin: 0;
+    }
 }
