--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 :root {
     --light-grey: #f0f0f0;
@@ -10,7 +11,6 @@
 }
 
 html {
-    font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     width: 100%;
@@ -18,6 +18,7 @@ html {
     margin: 0;
 }
 body {
+    font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     width: 100%;
