--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -59,6 +59,10 @@ form {
     justify-content: space-between;
 }
 
+.side__bar{
+    margin-right: 1rem;
+}
+
 .side__menu {
     display: grid;
     justify-items: start;
