--- a/src/components/components.css
+++ b/src/components/components.css
@@ -46,6 +46,20 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--card);
+    padding: 0;
+    width: 100%;
+    margin: 0;
+}
+
+.popup__over {
+    /* background-color: var(--card); */
+    color: var(--text);
+}
+
+.ant-popover-arrow,
+.ant-popover-inner-content {
+    background-color: var(--card) !important;
 }
 
 @media only screen and (max-width: 450px) {
