--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -22,6 +22,7 @@ form {
     opacity: 0.7;
     font-weight: bold;
     text-align: center;
+    color: var(--text);
 }
 
 @media only screen and (max-width: 450px) {
