--- a/src/views/exam/exam.css
+++ b/src/views/exam/exam.css
@@ -103,5 +103,9 @@
     margin-bottom: 1rem !important;
 }
 
+.exam__details__page {
+    margin-top: -3.2rem;
+}
+
 @media only screen and (max-width: 450px) {
 }
